refactor: Refactored User Validations, Tests, Cow formulation and updated spring/java version
chore: Update versions of Spring 4.0.5 and java 25

feat: Added Andre calculations of protein calcs

fix: Fixed classes of test to new spring/java version

refactor: Refactored save method in PropertyServiceImpl

refactor: Removed UserValidator validation in Entity and added the logic in UserServiceImpl